--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:orientation="horizontal">
 
         <NumberPicker
-            android:id="@+id/numberpicker_main_hour"
+            android:id="@+id/numberpicker_main_hours"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -29,7 +29,7 @@
             android:layout_gravity="center_vertical"/>
 
         <NumberPicker
-            android:id="@+id/numberpicker_main_minute"
+            android:id="@+id/numberpicker_main_minutes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -37,6 +37,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/main_minutelabel"
+            android:textColor="@color/timeLabel"
+            android:textSize="25sp"
+            android:layout_gravity="center_vertical"/>
+
+        <NumberPicker
+            android:id="@+id/numberpicker_main_seconds"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/main_secondlabel"
             android:textColor="@color/timeLabel"
             android:textSize="25sp"
             android:layout_gravity="center_vertical"/>
