--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,15 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="android:textColorPrimary">@color/colorDefaultText</item>
+        <item name="android:textColorSecondary">@color/colorDefaultText</item>
+        <item name="android:textColor">@color/colorDefaultText</item>
+        <item name="android:windowBackground">@color/color_main_background</item>
+        <item name="android:imageButtonStyle">@style/defaultImageButton</item>
+    </style>
+
+    <style name="defaultImageButton">
+        <item name="android:backgroundTint">#FFFFFF</item>
     </style>
 
 </resources>
