--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="main_controlbuttonsize">100dp</dimen>
     <dimen name="main_timeLabelSize">25sp</dimen>
     <dimen name="timercompleted">50sp</dimen>
+    <dimen name="main_resetButtonSize">50dp</dimen>
 </resources>
