--- a/app/src/main/res/drawable/ic_pause.xml
+++ b/app/src/main/res/drawable/ic_pause.xml
@@ -1,6 +1,7 @@
 <vector android:height="24dp" android:viewportHeight="64.0"
-    android:viewportWidth="64.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M32,5c14.89,0 27,12.11 27,27S46.89,59 32,59S5,46.89 5,32S17.11,5 32,5M32,2C15.43,2 2,15.43 2,32c0,16.57 13.43,30 30,30s30,-13.43 30,-30C62,15.43 48.57,2 32,2L32,2z"/>
-    <path android:fillColor="#FF000000" android:pathData="M39,17.56c-2.75,0 -5,2.25 -5,5v18.88c0,2.75 2.25,5 5,5s5,-2.25 5,-5V22.56C44,19.81 41.75,17.56 39,17.56zM41,41.44c0,1.1 -0.9,2 -2,2s-2,-0.9 -2,-2V22.56c0,-1.1 0.9,-2 2,-2s2,0.9 2,2V41.44z"/>
-    <path android:fillColor="#FF000000" android:pathData="M25,17.56c-2.75,0 -5,2.25 -5,5v18.88c0,2.75 2.25,5 5,5s5,-2.25 5,-5V22.56C30,19.81 27.75,17.56 25,17.56zM27,41.44c0,1.1 -0.9,2 -2,2s-2,-0.9 -2,-2V22.56c0,-1.1 0.9,-2 2,-2s2,0.9 2,2V41.44z"/>
+    android:viewportWidth="64.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android"
+    android:tint="@color/button_tint">
+    <path android:fillColor="#FFFF0000" android:pathData="M32,5c14.89,0 27,12.11 27,27S46.89,59 32,59S5,46.89 5,32S17.11,5 32,5M32,2C15.43,2 2,15.43 2,32c0,16.57 13.43,30 30,30s30,-13.43 30,-30C62,15.43 48.57,2 32,2L32,2z"/>
+    <path android:fillColor="#FFFF0000" android:pathData="M39,17.56c-2.75,0 -5,2.25 -5,5v18.88c0,2.75 2.25,5 5,5s5,-2.25 5,-5V22.56C44,19.81 41.75,17.56 39,17.56zM41,41.44c0,1.1 -0.9,2 -2,2s-2,-0.9 -2,-2V22.56c0,-1.1 0.9,-2 2,-2s2,0.9 2,2V41.44z"/>
+    <path android:fillColor="#FFFF0000" android:pathData="M25,17.56c-2.75,0 -5,2.25 -5,5v18.88c0,2.75 2.25,5 5,5s5,-2.25 5,-5V22.56C30,19.81 27.75,17.56 25,17.56zM27,41.44c0,1.1 -0.9,2 -2,2s-2,-0.9 -2,-2V22.56c0,-1.1 0.9,-2 2,-2s2,0.9 2,2V41.44z"/>
 </vector>
